- Refactored Porzana 	- from now full service class - New helpers 	- HTML 	- Text - Refactored Crex\Web\Form (and childs) 	- inputs formed into Web\Item extends 	- can be drawn by Helper\HTML

--- a/app/config.neon
+++ b/app/config.neon
@@ -1,4 +1,4 @@
-address: http://localhost/crex/
+address: http://localhost/crex-git/crex/
 lang: cs-cZ
 def_controller_path: app\Crex\Controller
 def_service_path: 
